# kosa-final-project

./: .gitignore  .gitlab-ci.yml  Proxmox-TROUBLESHOOTING.md  README.md  deploy-k8s.sh  deploy-multicluster.sh  deploy-s3.sh  docker-compose.yaml  init-db.sh
.gitea/workflows/: provision-worker.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  document_request.md  documentation_request.md  feature_request.md
00.scripts/: 00-create-ubuntu-2404-base.sh  00-force-destroy-vm.sh  README.md  create-ubuntu-template.sh
01.packer/: 01-build-9003.sh  01-build-9005.sh  README.md  credentials.pkr.hcl.example
01.packer/ubuntu-2404-common/: packer-ubuntu-template.pkr.hcl  ssh-credentials.pkrvars.hcl.example
01.packer/ubuntu-2404-k8s/: install-k8s.sh  packer-k8s-template.pkr.hcl
02.terraform/: .terraform.lock.hcl  02-force-destroy-all.sh  02-run.sh  PERFORMANCE.md  README.md  cluster-info.json  force-destroy-all.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
02.terraform/env/: ansible.pub  (+1 more)
03.ansible/: .env.example  03-create-control-node.sh  03-deploy-to-control.sh  EXAMPLES.md  OPERATIONS.md  README.md  TROUBLESHOOTING.md
04.k8s/: README.md
05.cicd/: README.md
Flaskapp/: docker-run.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/api-gateway/: main.py
backend/employee_service/: main.py  service.py
backend/welfare_service/: Dockerfile  main.py  models.py  routes.py  service.py
frontend/: Dockerfile  package-lock.json  package.json
references/: API.md  README.md  deploy-mha.sh
(+314 files in other folders)
